--- a/Resources/assets/scss/_breadcrumbs.scss
+++ b/Resources/assets/scss/_breadcrumbs.scss
@@ -1,3 +1,10 @@
+.breadcrumb {
+    padding: 0;
+    margin: 0;
+    border-radius: 0;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.05);
+    background-color: tint($primary, 94%);
+}
 .breadcrumb li {
     vertical-align: middle;
 }
@@ -13,7 +20,7 @@
 
 .breadcrumb,
 .breadcrumb>.active {
-    color: #000000!important;
+    color: shade($primary, 40%);
 }
 
 .breadcrumb>.active {
@@ -33,6 +40,7 @@
 .breadcrumb li>a,
 .breadcrumb li>span {
     color: inherit;
+    display: inline-block;
     font-size: .875em;
     line-height: 1rem;
     padding: 1rem .85em;
@@ -48,6 +56,6 @@
     &:focus,
     &:active {
         background-color: transparent !important;
-        color: #666 !important;
+        color: tint($primary, 40%) !important;
     }
 }
