--- a/Resources/assets/scss/_variables.scss
+++ b/Resources/assets/scss/_variables.scss
@@ -1,8 +1,22 @@
-$primary-color: #222;
 $success: #529948;
 $danger: #900;
 $warning: #f0ad4e;
-$off-black: #2d2d2d;
-$gray: #dadada;
-$light-gray: #ebebeb;
-$lighter-gray: #f2f2f2;
+$info: #666666;
+
+$primary: #222;
+$contrast: #000;
+$contrast-alt: #fff;
+
+$header-height: 50px;
+$padding: 2.7rem; //form padding
+
+$break-md: 30em; //media query
+$break-md: 50em; //media query
+$break-md: 70em; //media query
+
+@function tint($color, $percentage) {
+  @return mix(white, $color, $percentage);
+}
+@function shade($color, $percentage) {
+  @return mix(black, $color, $percentage);
+}
