Bugfix: Also show menu when you can download stuff

--- a/Resources/views/CRUD/list.html.twig
+++ b/Resources/views/CRUD/list.html.twig
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block list_footer %}
-    {% if admin.datagrid.results|length > 0 and batchactions | length %}
+    {% if admin.datagrid.results|length > 0 and (batchactions | length or export_formats | length) %}
         {{ parent() }}
     {% endif %}
 {% endblock %}
