--- a/Resources/assets/scss/_edit.scss
+++ b/Resources/assets/scss/_edit.scss
@@ -1,4 +1,36 @@
 // edit form
+.c-content_inner {
+    padding: 0 $padding;
+    clear: both;
+}
+.c-content__title {
+    padding: $padding;
+    max-width: 50rem;
+    @media only screen and (min-width: $break-md) {
+        float: left;
+    }
+}
+.c-content__title__text {
+    font-size: 2.5em;
+    font-weight: 700;
+    line-height: 1;
+    margin: 0;
+    @media only screen and (min-width: $break-md) {
+        font-size: 3.5em;
+    }
+}
+.c-content__actions {
+    padding: 0 calc(15px + 2.7em);
+    &:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
+    @media only screen and (min-width: $break-md) {
+        float: right;
+        margin-top: $padding;
+    }
+}
 .box-title {
     display: none;
 }
