--- a/Resources/assets/scss/theme.scss
+++ b/Resources/assets/scss/theme.scss
@@ -19,6 +19,7 @@
 	max-width: 24rem;
 	margin-left: auto;
 	margin-right: auto;
+	position: relative;
 	.box {
 		padding: $padding;
 		.box-body {
@@ -33,6 +34,9 @@
 		}
 		.btn {
 			margin: 0.5rem;
-		} 
+		}
+	}
+	.mfp-close {
+		// styles?
 	}
 }
