--- a/Resources/assets/scss/_overrides.scss
+++ b/Resources/assets/scss/_overrides.scss
@@ -81,10 +81,19 @@
 	border-color: #333;
 }
 
+.select2-dropdown-open.select2-drop-above .select2-choice,
+.select2-dropdown-open.select2-drop-above .select2-choices {
+  border-color: #000;
+}
+
 .select2-dropdown-open.select2-drop-above [class^=select2-choice],
 .select2-container-multi .select2-choices .select2-search-choice,
 .select2-search input {
 	border-radius: 0!important;
+}
+
+.select2-drop-auto-width {
+    width: 128px !important;
 }
 
 .select2-container .select2-choice,
