--- a/Resources/assets/scss/theme.scss
+++ b/Resources/assets/scss/theme.scss
@@ -40,3 +40,27 @@
 		// styles?
 	}
 }
+
+// icons
+.fa-plus-circle:before,
+.delete_link i:before,
+.fa-home:before,
+.fa-user:before,
+.alert .close:before,
+.alert-success:before,
+.glyphicon-remove:before,
+.glyphicon-ok:before/*,
+.mfp-close:before*/ {
+	content:'';
+	background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+}
+.fa-plus-circle:before {
+    background-image: url('../images/icons/ic_add_white.svg');
+    margin-right: 0.5em;
+    vertical-align: -0.25em;
+}
